--- a/src/Screens/LoginScreen/style.css
+++ b/src/Screens/LoginScreen/style.css
@@ -62,6 +62,7 @@ a {
   color: #ffffff;
   text-align: center;
   margin: 0px;
+  margin-bottom: 10px !important;
 }
 
 .login-form-main-container {
