--- a/src/Screens/TranscationScreen/style.css
+++ b/src/Screens/TranscationScreen/style.css
@@ -88,3 +88,11 @@ input,
     width: 100% !important;
   }
 }
+
+.cardholder-input{
+  font-size: 18px;
+  background-color: #E7EEF5;
+  color: #4e5272;
+  font-weight: 600;
+}
+
