--- a/src/Screens/VehicleCombinedStatusScreen/style.css
+++ b/src/Screens/VehicleCombinedStatusScreen/style.css
@@ -1,15 +1,23 @@
 .content-main-container {
   position: absolute; 
   bottom: 0; 
-
 }
 @media only screen and (max-width: 550px) {
   .content-main-container {
     position: absolute; 
-  bottom: 0; 
+    /* bottom: 0;  */
     width: 100%;
+    top: 0;
   }
+  .tabs-bottom-color{
+    background-color: #e5e5e5;
+    position: absolute;
+    width: 100%;
+    min-height: 21%;
+  }
+  
 }
+
 
 .main-container {
   background: linear-gradient(0deg, rgba(27, 104, 179, 0.6) 0%, #1b68b3 99.97%);
