--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,9 @@ body {
   overflow: hidden;
   background: red;
 }
+*{
+  font-family:'Poppins' !important ;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
