--- a/src/Components/TabComponent/style.css
+++ b/src/Components/TabComponent/style.css
@@ -44,7 +44,7 @@
 
 @media only screen and (max-width: 550px) {
   .tabs-content-bg-color {
-    height: 500px ;
+    height: 500px;
   }
 }
 
@@ -55,25 +55,27 @@
 
 /* width */
 ::-webkit-scrollbar {
-  width: 0px;
+  width: 3px;
   margin-top: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(231, 231, 231);
+  /* box-shadow: inset 0 0 5px rgb(231, 231, 231); */
   border-radius: 10px;
+  margin-top: 14px;
+  margin-bottom: 12px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(231, 231, 231);
+  background: orange;
   border-radius: 10px;
 }
 
-.draft-message-show{
+.draft-message-show {
   display: flex;
-justify-content: center;
-align-items: center;
-margin-top: 200px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
 }
