--- a/src/App.css
+++ b/src/App.css
@@ -1,151 +1,165 @@
-.App {
-  text-align: center;
+@import "~antd/dist/antd.css";
+
+.menuBar {
+  padding: 0 20px;
+  overflow: auto;
+  width: 80%;
+  margin: 0 auto;
 }
 
-* {
-  font-family: 'Poppins';
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.ant-modal-wrap {
-  z-index: 100000000000000 !important;
-  overflow: scroll ;
-}
-
-.input-field {
-  background: rgb(231, 238, 245) !important;
-  border: 1px solid rgb(231, 239, 248) !important;
-  box-sizing: border-box !important;
-  border-radius: 3px !important;
-  width: 100% !important;
-  margin: 0px auto 14px !important;
-  padding: 12px 14px !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-size: 16px !important;
-  font-family: 'Poppins' !important;
-  line-height: 24px !important;
-  letter-spacing: 1px !important;
-}
-
-.form-container {
-  width: 66%;
-}
-
-.button-wrapper {
-  background: linear-gradient(90deg, rgb(255, 122, 0) 0%, rgb(255, 153, 0) 94.74%) !important;
-  border-radius: 100px !important;
-  border: 1px solid rgb(255, 116, 0) !important;
-  font-style: normal !important;
-  font-weight: 400 !important;
-  font-size: 15px !important;
-  line-height: 27px !important;
-  text-align: center !important;
-  color: rgb(255, 255, 255) !important;
-  padding: 10px 60px !important;
-  text-decoration: none !important;
-  cursor: pointer !important;
-  width: 260px !important;
-  margin: 0px auto !important;
-  height: 54px !important;
-}
-
-.ant-input-affix-wrapper > input.ant-input {
-  background: transparent;
-}
-
-.ant-select-selector {
-  background: transparent !important;
-  border: none !important;
-  text-align: left !important;
-}
-
-.ant-form-item {
-  margin-bottom: 0px !important;
-}
-
-.form-item-style > .ant-form-item-control {
-  /* margin-bottom: 10px; */
-}
-
-.ant-input-affix-wrapper > input.ant-input {
-  border: none !important;
-  box-shadow: none !important;
-  font-family: 'Poppins' !important;
-  font-size: 16px !important;
-}
-.react-stars-wrapper-002155496152759251:focus {
-  border: none !important;
-}
-@media screen and (min-width: 600px) {
-  .form-container {
-    width: 66%;
-  }
-  .button-wrapper {
-    width: 30%;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .form-container {
+@media  screen and (max-width: 500px) {
+  .menuBar{
     width: 100%;
   }
+  
+}
+.logo {
+  /*width: 150px;*/
+  float: left;
+  margin-top: 5px;
 }
 
-@media screen and (min-width: 900px) {
-  .form-container {
-    width: 40%;
-  }
+.logo img {
+  height: 50px;
+  width: 150px;
+}
+.menuNavbarMain{
+background-color: transparent;
+  color:white!important;
+
+}
+.menuItemClr{
+  color:white!important;
+  text-decoration: none;
+
+}
+.dropDownMenuWrap{
+  background-color: black;
+  color: white;
+}
+.linkNavbar_wrap_menu{
+
+  color: white!important;
+}
+.linkNavbar_wrap{
+color: white!important;
+}
+.linkNavbar_wrap:hover{
+  color: red!important;
+}
+.logo a {
+  display: inline-block;
+  font-size: 20px;
+  color:red;
+  padding: 19px 20px;
+  text-transform: capitalize;
 }
 
-@media screen and (min-width: 1024px) {
-  .form-container {
-    width: 30%;
-  }
+.menuCon {
+  width: calc(100% - 150px);
+  float: left;
 }
 
-/* @media screen and (min-width: 850px) {
-  .form-container {
-    width: 66%;
-  }
+.menuCon .ant-menu-item {
+  padding: 0px 5px;
 }
 
-@media screen and (max-width: 900px) {
-  .form-container {
-    width: 66%;
-  }
-} */
+.menuCon .ant-menu-submenu-title {
+  padding: 10px 20px;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.menuCon .ant-menu-item a,
+.menuCon .ant-menu-submenu-title a {
+  padding: 10px 15px;
+}
+
+.menuCon .ant-menu-horizontal {
+  border-bottom: none;
+}
+
+.menuCon .leftMenu {
+  float: right;
+}
+
+.menuCon .leftMenu a{
+  color: #FFFFFF;
+}
+
+.barsMenu {
+  float: right;
+  height: 32px;
+  padding: 6px;
+  margin-top: 8px;
+  display: none;
+  background: none;
+}
+
+.barsBtn {
+  display: block;
+  width: 20px;
+  height: 2px;
+  background: white;
+  position: relative;
+}
+
+.barsBtn:after,
+.barsBtn:before {
+  content: attr(x);
+  width: 20px;
+  position: absolute;
+  top: -6px;
+  left: 0;
+  height: 2px;
+  background: white;
+}
+
+.barsBtn:after {
+  top: auto;
+  bottom: -6px;
+}
+
+.ant-drawer-body {
+  padding: 0;
+}
+
+.barsMenu>span {
+  display: block;
+}
+
+.ant-drawer-body .ant-menu-horizontal>.ant-menu-item,
+.ant-drawer-body .ant-menu-horizontal>.ant-menu-submenu {
+  display: inline-block;
+  width: 100%;
+}
+
+.ant-drawer-body .ant-menu-horizontal {
+  border-bottom: none;
+}
+
+.ant-drawer-body .ant-menu-horizontal>.ant-menu-item:hover {
+  border-bottom-color: transparent;
+}
+
+@media (max-width: 767px) {
+  .barsMenu {
+    display: inline-block;
   }
-  to {
-    transform: rotate(360deg);
+
+  .leftMenu,
+  .rightMenu {
+    display: none;
+  }
+
+  .logo a {
+    margin-left: -20px;
+  }
+
+  .menuCon .ant-menu-item,
+  .menuCon .ant-menu-submenu-title {
+    padding: 1px 20px;
+  }
+
+  .logo a {
+    padding: 10px 20px;
   }
 }
